--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -103,6 +103,10 @@
           },
           "convertir": {
             "tooltip": "Click to convert"
+          },
+          "transformar": {
+            "label": "Transform",
+            "tooltip": "Click to transform"
           }
         }
       },
